fixed horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   position: relative;
   height: 100vh;
   width: 100vw;
-  overflow-y: hidden;
   background-color: #efedf4;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar { 
